added header fields

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,7 +32,7 @@
 
 body { padding-top: 60px; }
 
-.add_value_btn  {
+.add_value_btn, .add_header_value_btn  {
   display: inline-block;
   .ie7-inline-block();
   padding: @paddingMini;
