refined result output in view page & fixed header field issues

--- a/app/views/api/_result.html.erb
+++ b/app/views/api/_result.html.erb
@@ -25,7 +25,7 @@
 	Count: <%= @reqd_and_opt_results.size %><br>
 <%= @method[:method] %> 
 	<% @reqd_and_opt_results.each do |r| %>
-          <%= @endpoint %> <%= r.to_s.gsub("[", "").gsub("]", "").gsub("\"", "") %>
+      <%= @endpoint %> <%= r.join(" ") %>
             <% end %>
         
 </pre>
