--- a/app/views/api/home.html.erb
+++ b/app/views/api/home.html.erb
@@ -1,14 +1,19 @@
 <%- model_class = Api -%>
 <div class="page-header">
-  <h4><%=t '.title', :default => model_class.model_name.human %></h4>
+<!--  <h4><%=t '.title', :default => model_class.model_name.human %></h4> -->
+  <p>Generates all possible combinations of required and optional parameter values for the given REST endpoint</p>
 </div>
 
 
-	<%= form_tag( "/api/home", :method => "get", :remote => true,:id => 'api_form' , :class => 'dl-horizontal') do %>
-	
+	<%= form_tag( "/api/home", :method => "get", :remote => true,:id => 'api_form' , :class => 'form-horizontal') do %>
+ <div class="control-group">
+	 <label class="control-label" for="http-method">
 	<strong>HTTP Method:</strong><br/>
+</label>
+ <div class="controls">
 	  <%= select("http","method", %w[GET POST PUT DELETE HEAD], {:include_blank => false}) %>
-	  
+  </div>
+</div>
 	 <div class="control-group">
 		 <label class="control-label" for="endpoint">
 			<strong>API:</strong>
@@ -18,35 +23,51 @@
 	      </div>
 	  </div>
 		  
-	
+ 	 <div class="control-group">
+ 		 <label class="control-label" for="reqd-params">
 	 <strong> Required parameters: </strong>
+ </label>
+	   <div class="controls">
 	  <div id="rpm_1" class="rparam">
 	  <%= text_field_tag(:rparams_1, nil,  :placeholder => "Required Parameter") %> 
 	   <%= select_tag("rparam_values_1", %w[].to_s, :multiple => true, :include_blank => true) %> 
 	   <%= text_field_tag(:add_rparam_value_1, nil, :placeholder => "Enter value", :class => "value_text_field") %> 
-	   <%= button_tag "Add value", :class => "add_value_btn", :id => "add_rparam_value_btn_1" %><br/>
+	   <%= button_tag "Add", :class => "add_value_btn", :id => "add_rparam_value_btn_1" %><br/>
 	    </div>
-	  <%= button_to_function "Add Reqd param", "addReqdParam()" , :id => "add_rparam" , :class => 'btn btn-inverse' %><br/>
+	  <%= button_to_function "Add Reqd param", "addReqdParam()" , :id => "add_rparam" , :class => 'btn' %><br/>
 	  <br/>
+  </div>
+</div>
+<div class="control-group">
+ <label class="control-label" for="opt-params">
      <strong>Optional Parameters:</strong>
+ </label>
+	  <div class="controls">
 	  <div id="opm_1" class="oparam">
 	   <%= text_field_tag(:oparams_1, nil,  :placeholder => "Optional Parameter") %> 
 	    <%= select_tag("oparam_values_1", %w[].to_s,  :multiple => true, :include_blank => true) %>  
 		<%= text_field_tag(:add_oparam_value_1, nil,  :placeholder => "Enter value", :class => "value_text_field") %> 
-		 <%= button_tag "Add value", :class => "add_value_btn", :id => "add_oparam_value_btn_1" %><br/>
+		 <%= button_tag "Add", :class => "add_value_btn", :id => "add_oparam_value_btn_1" %><br/>
 	 </div> 
-	  <%= button_to_function "Add Optional param", "addOptionalParam()" , :id => "add_oparam", :class => 'btn btn-inverse' %><br/><br/>
+	  <%= button_to_function "Add Optional param", "addOptionalParam()" , :id => "add_oparam", :class => 'btn' %><br/><br/>
+  </div>
+</div>
+<div class="control-group">
+ <label class="control-label" for="req-resp-header">
 	 <strong>Request/Response Header:</strong>
+ </label>
+	  <div class="controls">
 <div id="header_1" class="header">
   <%= select("header", "type_1", %w[accept content-type location], :include_blank => false) %> 
   <%= select_tag("header_values_1", %w[].to_s,  :multiple => true, :include_blank => true) %>  
   <%= text_field_tag(:header_value_1, nil,  :placeholder => "Enter value", :class => "header_value_text_field") %> 
-  <%= button_tag "Add value", :class => "add_header_value_btn", :id => "add_header_value_btn_1" %><br/>
+  <%= button_tag "Add", :class => "add_header_value_btn", :id => "add_header_value_btn_1" %><br/>
 </div>
- <%= button_to_function "Add Header", "addHeader()" , :id => "add_header", :class => 'btn btn-inverse' %><br/>	
-
+ <%= button_to_function "Add Header", "addHeader()" , :id => "add_header", :class => 'btn' %><br/>	
+</div>
+</div>
 <div class="form-actions">
-<%= submit_tag("Run", :class => 'btn btn-primary')  %>
+<%= submit_tag("Get Combinations", :class => 'btn btn-primary')  %>
 </div>
 	<% end %>
 	
