--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
@@ -46,11 +46,7 @@
           </a>
           <a class="brand" href="#">RESTlogic</a>
           <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
+            
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -58,11 +54,11 @@
 
     <div class="container">
         <div class="row">
-          <div class="span9">
+          <div class="span10">
             <%= bootstrap_flash %>
             <%= yield %>
           </div>
-          <div class="span3">
+        <div class="span3" hidden="true" >
             <div class="well sidebar-nav">
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
@@ -73,6 +69,7 @@
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
+	
         </div><!--/row-->
 
       <footer>
