--- a/app/views/api/home.html.erb
+++ b/app/views/api/home.html.erb
@@ -68,6 +68,7 @@
 </div>
 <div class="form-actions">
 <%= submit_tag("Get Combinations", :class => 'btn btn-primary')  %>
+<%= link_to("Generate Tests", api_tests_path, {:target => "_blank"}  ) %>
 </div>
 	<% end %>
 	
