--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,28 @@
  *= require_self
  *= require_tree .
  */
+
+ .navlogo {
+     border-right: 1px solid black;
+     float: left;
+     height: 24px;
+     padding: 6px 15px 0 17px;
+ }
+ 
+ div#wait
+ {
+     display: none;
+     width:150px;
+     height: 40px;
+     position: fixed; 
+     top: 50%;
+     left: 50%;
+     text-align:center;
+     padding:5px;
+     font:normal 16px Tahoma, Geneva, sans-serif;
+     border:3px solid #666;
+     margin-left: -50px; 
+     margin-top: -50px;
+     z-index:2;
+     overflow: auto;
+ }
