--- a/app/views/api/home.html.erb
+++ b/app/views/api/home.html.erb
@@ -52,7 +52,7 @@
  <label class="control-label" for="req-resp-header"><strong>Request/Response Header:</strong> </label>
 	 <div class="controls">
 		 <div id="header_1" class="header">
-  		   	<%= select("header", "type_1", %w[accept content-type location], :include_blank => false) %> 
+  		   	<%= select("header", "type_1", %w[accept accept-encoding accept-language accept-charset cache-control user-agent connection referer content-type location content-length server date expires].sort, :include_blank => false) %> 
   			<%= select_tag("header_values_1", %w[].to_s,  :multiple => true, :include_blank => true) %>  
   	   		<%= text_field_tag(:header_value_1, nil,  :placeholder => "Enter value", :class => "header_value_text_field") %> 
   	 		<%= button_tag "Add", :class => "add_header_value_btn", :id => "add_header_value_btn_1" %><br/>
