added root_path to site title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
           </a>
 		  <img src="/ml-logo.png" alt="Marklogic" class="navlogo" width="120" height="50" border="0">
-          <a class="brand" href="#">RESTlogic</a>
+		  <%= link_to "RESTlogic", root_path, :class => "brand" %>
           <div class="container nav-collapse">
             
           </div><!--/.nav-collapse -->
