--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="span10">
 	  		<div id="myModal" class="modal fade hide" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static" style="width:0px;display:none;">
-	  		<div id="wait" class="progress progress-danger progress-striped active" style="max-width:200px">
-	  			 <div class="bar" style="width: 100%;"></div>
+	  		<div id="wait" class="progress progress-danger progress-striped active">
+	  			 <div class="bar" style="width: 100%;"><p style="position: relative; top: 20%;">Genius at work please wait...</p></div>
 	  			</div>
 	  		</div>
             <%= bootstrap_flash %>
