--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -12,9 +12,11 @@
 @fontAwesomeEotPath_iefix: asset-path("fontawesome-webfont.eot?#iefix&v=3.0.2");
 @fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff?v=3.0.2");
 @fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf?v=3.0.2");
+@fontAwesomeSvgPath: asset-path("/assets/fontawesome-webfont.svg");
 
 // Font Awesome
-@import "fontawesome";
+@import "fontawesome/font-awesome";
+
 
 // Glyphicons
 //@import "twitter/bootstrap/sprites.less";
